Fix TestRail MCP integration URL handling and API paths

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# TestRail API connection settings
-TESTRAIL_URL=https://your-instance.testrail.io
-TESTRAIL_USERNAME=your-email@example.com
-TESTRAIL_API_KEY=your-api-key 
+# TestRail API Configuration
+# IMPORTANT: URL format must be exactly like below, ending with index.php?
+TESTRAIL_URL=https://your-instance.testrail.com/index.php?
+TESTRAIL_USERNAME=your-username
+TESTRAIL_API_KEY=your-api-key
