--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,44 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Dependency directories
+node_modules/
+dist/
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-coverage/
+# Environment variables
 .env
+.env.local
+.env.development
+.env.test
+.env.production
+.env.fixed
+.env.final
+
+# Debugging files
+debug_backup/
+*.debug.js
+*.debug.ts
+*.log
+
+# Temporary files
+*.tmp
+temp/
+tmp/
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Build output
+build/
+lib/
+
+# Testing
+coverage/
+
+# macOS specific files
+.DS_Store
+
+# Cursor integration docs (kept separate from repo)
+CURSOR_INTEGRATION.md
+SOLUTION.md
+RELEASE.md
